# bachelors

./: .gitignore  .pre-commit-config.yaml  IMPLEMENTATION_PLAN.md  README.md  SETUP.md  THESIS_AND_RESULTS.md  build_combined_catalog.py  config.py  evaluate_models_bootstrap.py  generate_combined_embeddings.py  precompute_embeddings.py  pyproject.toml  recommend.py  test_recommender_engine.py  test_user.py  train_all_models.py  train_collaborative.py  train_content_based.py  train_knn.py  train_ncf.py  train_two_tower.py
.github/: cspell.json  labeler.yml  pull_request_template.md
.github/PULL_REQUEST_TEMPLATE/: backend.md  devops.md  frontend.md  model-training.md
.github/workflows/: labeler.yml  lint.yml  security.yml  spellcheck.yml
app/: .gitignore  README.md  docker-compose.yml
app/backend/: Dockerfile  requirements.txt
app/backend/config/: settings.py  urls.py  wsgi.py
app/backend/core/: models.py  serializers.py  urls.py  views.py
app/backend/core/migrations/: 0001_initial.py
app/backend/recommendations/: models.py  urls.py  views.py
app/backend/recommendations/services/: __init__.py  qdrant_service.py  recommendation_engine.py  tf_serving_client.py  tmdb_client.py
app/backend/users/: models.py  serializers.py  urls.py  views.py
app/backend/users/migrations/: 0001_initial.py
app/frontend/: .prettierignore  .prettierrc  next.config.js  package-lock.json  package.json  tailwind.config.js
app/frontend/src/app/: globals.css  layout.tsx  page.tsx
app/frontend/src/components/: GenreRow.tsx  Header.tsx  HeroSection.tsx  MovieCard.tsx  MovieGrid.tsx  MovieModal.tsx  OnboardingWizard.tsx  RecommendationSection.tsx  (+3 more)
app/scripts/: init-db.sql  setup.sh
app/tf-serving/: models.config
model/: metadata.json  preprocessing.ipynb  preprocessing.md  requirements.txt
model/artifacts/: avengers_recommendations.json  metrics_summary.json  recommendation_similarity.json  run_summary.json
model/experiments/: .gitkeep
model/metrics/: bootstrap_results.json  collaborative_results.json  combined_stats.json  content_based_results.json  knn_results.json  movielens_stats.json  ncf_results.json  results.json  tmdb_stats.json  two_tower_results.json
model/src/: __init__.py  cf_surprise.py  config.py  content_based.py  data_utils.py  metrics.py  plotting.py  run_pipeline.py  two_tower.py
model/src/cli/: __init__.py  app.py  display.py  embedding_store.py  engine.py  movie_catalog.py  user_store.py
model/src/evaluation/: __init__.py  metrics.py  run_evaluation.py
model/src/models/: __init__.py  base.py  collaborative.py  content_based.py  export_two_tower.py  knn.py  ncf.py  two_tower.py
model/src/visualization/: __init__.py  dataset_eda.py  eda_plots.py  embedding_plots.py  generate_plots.py  model_plots.py  plots.py  predictions_comparison.py  two_tower_plots.py
(+11 files in other folders)
