[project]
name = "bachelors-recommendation-system"
version = "0.1.0"
description = "Movie recommendation system using collaborative filtering, content-based filtering, and two-tower models"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
  # Data Processing
  "polars>=0.19.0",
  "pyarrow>=14.0.0",
  "numpy>=1.22,<1.24",  # TF 2.12 requires numpy <1.24
  "pandas>=2.0.0,<2.1.0",  # Compatible with numpy <1.24

  # Scientific Computing
  "scipy>=1.11.0",
  "scikit-learn>=1.3.0",
  "scikit-surprise>=1.1.4",

  # TensorFlow Ecosystem (Primary ML Framework - Pure TensorFlow)
  # TensorFlow 2.12 for Apple Silicon with custom tensorflow-text build
  "tensorflow-macos==2.12.0; sys_platform == 'darwin'",
  "tensorflow==2.12.0; sys_platform != 'darwin'",
  "tensorflow-metal==0.8.0; sys_platform == 'darwin'",
  # tensorflow-text will be installed separately via custom wheel
  "tensorflow-recommenders>=0.7.3",
  "tensorflow-hub>=0.15.0",

  # Experiment Tracking
  "mlflow>=2.9.0",

  # Visualization
  "matplotlib>=3.7.0",
  "seaborn>=0.12.0",
  "plotly>=5.18.0",

  # Notebooks
  "jupyter>=1.0.0",
  "ipykernel>=6.25.0",

  # Utilities
  "joblib>=1.3.0",
  "tqdm>=4.66.0",
  "pyyaml>=6.0.0",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "isort>=5.13.2",
    "flake8>=7.1.1",
    "pre-commit>=3.0.0",
    "pip-audit>=2.0.0",
]

[tool.black]
line-length = 127
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.venv
  | build
  | dist
  | data
)/
'''

[tool.isort]
profile = "black"
line_length = 127
skip_gitignore = true

[project.scripts]
recommend = "model.src.cli.app:main"
